--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb://127.0.0.1:27017/hall-booking
+MONGO_URI=mongodb+srv://charanc1147:eK2ympxdVfglRIxK@cluster0.uffox.mongodb.net/
